--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-container">
             <div class="logo-container">
                 <div class="logo-image">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='48' fill='%230f3460' stroke='%2300d4ff' stroke-width='2'/%3E%3Ctext x='50' y='60' font-size='40' font-weight='bold' text-anchor='middle' fill='%2300d4ff' font-family='Roboto Mono'%3EEK%3C/text%3E%3C/svg%3E" alt="Emmanuel Kiptoo">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Test-Logo.svg/2560px-Test-Logo.svg.png" alt="Emmanuel Kiptoo">
                 </div>
                 <div class="logo">
                     <span class="logo-bracket">&lt;</span>
@@ -72,7 +72,7 @@
                         <polygon points="100,20 170,60 170,140 100,180 30,140 30,60" fill="none" stroke="url(#hexGradient)" stroke-width="2" filter="url(#glow)" />
                     </svg>
                     <div class="portrait-image">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%230f3460;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%23162e4d;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='200' height='200' fill='url(%23grad)'/%3E%3Ccircle cx='100' cy='70' r='30' fill='%23e8e8e8'/%3E%3Cellipse cx='100' cy='140' rx='45' ry='50' fill='%23e8e8e8' opacity='0.8'/%3E%3Crect x='70' y='100' width='60' height='60' fill='%2316213e'/%3E%3C/svg%3E" alt="Emmanuel Kiptoo Kili">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Test-Logo.svg/2560px-Test-Logo.svg.png" alt="Emmanuel Kiptoo Kili">
                     </div>
                 </div>
             </div>
