--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-container">
             <div class="logo-container">
                 <div class="logo-image">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Test-Logo.svg/2560px-Test-Logo.svg.png" alt="Emmanuel Kiptoo">
+                    <img src="file:///C:/Users/Attain/Music/portfolio/unnamed.jpg" alt="Emmanuel Kiptoo">
                 </div>
                 <div class="logo">
                     <span class="logo-bracket">&lt;</span>
@@ -32,6 +32,7 @@
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
+                <li><a href="#live" class="nav-link">Live</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -72,7 +73,7 @@
                         <polygon points="100,20 170,60 170,140 100,180 30,140 30,60" fill="none" stroke="url(#hexGradient)" stroke-width="2" filter="url(#glow)" />
                     </svg>
                     <div class="portrait-image">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Test-Logo.svg/2560px-Test-Logo.svg.png" alt="Emmanuel Kiptoo Kili">
+                        <img src="file:///C:/Users/Attain/Music/portfolio/unnamed.jpg" alt="Emmanuel Kiptoo Kili">
                     </div>
                 </div>
             </div>
@@ -108,6 +109,21 @@
         <div class="scroll-indicator">
             <span>Scroll to explore</span>
             <i class="fas fa-chevron-down"></i>
+        </div>
+    </section>
+
+    <!-- Live Coding Demo Section -->
+    <section id="live" class="live-demo">
+        <div class="container">
+            <h2 class="section-title">Live Coding Demo</h2>
+            <div class="code-window">
+                <div class="window-header">
+                    <span class="dot red"></span>
+                    <span class="dot yellow"></span>
+                    <span class="dot green"></span>
+                </div>
+                <pre class="window-code"><code id="live-code"></code><span class="caret" aria-hidden="true"></span></pre>
+            </div>
         </div>
     </section>
 
@@ -600,6 +616,25 @@
             <span>Let's Work Together</span>
             <i class="fas fa-arrow-right"></i>
         </a>
+    </div>
+
+    <!-- Chatbot Widget -->
+    <button class="chat-toggle" aria-label="Open chat">
+        <i class="fas fa-comments"></i>
+    </button>
+    <div class="chat-widget" aria-hidden="true">
+        <div class="chat-header">
+            <div class="chat-title">
+                <i class="fas fa-robot"></i>
+                <span>Assistant</span>
+            </div>
+            <button class="chat-close" aria-label="Close chat"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="chat-body" id="chat-messages" role="log" aria-live="polite"></div>
+        <div class="chat-input-row">
+            <input id="chat-input" type="text" placeholder="Ask about Emmanuel, skills, projects, contact..." aria-label="Message" />
+            <button id="chat-send" class="btn btn-primary" aria-label="Send"><i class="fas fa-paper-plane"></i></button>
+        </div>
     </div>
 
     <script src="script.js"></script>
