--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="nav-container">
             <div class="logo-container">
                 <div class="logo-image">
-                    <img src="https://github.com/OBASAKILLI/developer_kili/blob/master/unnamed.jpg" alt="Emmanuel Kiptoo">
+                    <img src="../unnamed.jpg" alt="Emmanuel Kiptoo">
                 </div>
                 <div class="logo">
                     <span class="logo-bracket">&lt;</span>
