--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <polygon points="100,20 170,60 170,140 100,180 30,140 30,60" fill="none" stroke="url(#hexGradient)" stroke-width="2" filter="url(#glow)" />
                     </svg>
                     <div class="portrait-image">
-                        <img src="file:///C:/Users/Attain/Music/portfolio/unnamed.jpg" alt="Emmanuel Kiptoo Kili">
+                        <img src="unnamed.jpg" alt="Emmanuel Kiptoo Kili">
                     </div>
                 </div>
             </div>
